--- a/jellyfin/templates/ingressroute.yaml
+++ b/jellyfin/templates/ingressroute.yaml
@@ -10,7 +10,7 @@ metadata:
   {{- with .Values.serviceAccount.annotations -}}
   annotations:
     {{- toYaml . | nindent 4 -}}
-  {{- end-}}
+  {{- end -}}
 spec:
   {{- with .Values.ingressRoute.entryPoints -}}
   entryPoints:
@@ -18,6 +18,6 @@ spec:
   {{- end -}}
   {{- if .Values.ingressRoute.tls -}}
   tls:
-    provider: {{ .Values.ingressRoute.tls.provider | "default" }}
+    provider: {{ .Values.ingressRoute.tls.provider . | default "default" . }}
   {{- end -}}
 {{- end -}}
