--- a/jellyfin/templates/ingressroute.yaml
+++ b/jellyfin/templates/ingressroute.yaml
@@ -6,18 +6,18 @@ kind: IngressRoute
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "jellyfin.labels" . | nindent 4 -}}
-  {{- with .Values.ingressRoute.annotations -}}
+    {{- include "jellyfin.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 -}}
-  {{- end -}}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  {{- with .Values.ingressRoute.entryPoints -}}
+  {{- with .Values.ingressRoute.entryPoints }}
   entryPoints:
-    {{- toYaml . | nindent 4 -}}
-  {{- end -}}
-  {{- if .Values.ingressRoute.tls -}}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- if .Values.ingressRoute.tls }}
   tls:
     provider: {{ .Values.ingressRoute.tls.provider | default "default" . }}
-  {{- end -}}
-{{- end -}}
+  {{- end }}
+{{- end }}
