--- a/jellyfin/templates/ingressroute.yaml
+++ b/jellyfin/templates/ingressroute.yaml
@@ -12,12 +12,23 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingressRoute.entryPoints }}
+  {{- if .Values.ingressRoute.entryPoints }}
   entryPoints:
-    {{- toYaml . | nindent 4 }}
+  {{- range .Values.ingressRoute.entryPoints }}
+    {{ . }}
+  {{- end }}
   {{- end }}
   {{- if .Values.ingressRoute.tls }}
   tls:
     provider: {{ .Values.ingressRoute.tls.provider | default "default" . }}
+  {{- end }}
+  {{- if .Values.ingressRoute.routes }}
+  routes:
+  {{- range .Values.ingressRoute.routes }}
+  - match: {{ .match }}
+    services: 
+    - name: {{ $fullName }}
+      port: {{ $svcPort}}
+  {{- end }}
   {{- end }}
 {{- end }}
