wrong host definition

--- a/jellyfin/templates/ingressroute.yaml
+++ b/jellyfin/templates/ingressroute.yaml
@@ -11,7 +11,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`minecraft.llucasshenrique.space`) && PathPrefix(`/routes`)
+  - match: Host(`jellyfin.llucasshenrique.space`)
     kind: Rule
     services:
     - name: {{ $fullName }}
