fix service port

--- a/jellyfin/templates/ingressroute.yaml
+++ b/jellyfin/templates/ingressroute.yaml
@@ -15,7 +15,7 @@ spec:
     kind: Rule
     services:
     - name: {{ $fullName }}
-      port: 8080
+      port: {{ $svcPort }}
   tls: 
     provider: cloudflare
   # {{- if .Values.ingressRoute.tls }}
