changed storage class to local-path

--- a/jellyfin/templates/persistentvolumeclaim.yaml
+++ b/jellyfin/templates/persistentvolumeclaim.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: manual
+  storageClassName: local-path
   volumeName: pv-jellyfin-media-1
   resources:
     requests:
@@ -19,7 +19,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: manual
+  storageClassName: local-path
   volumeName: pv-jellyfin-media-2
   resources:
     requests:
