--- a/jellyfin/templates/volumeclaim.yaml
+++ b/jellyfin/templates/volumeclaim.yaml
@@ -4,7 +4,7 @@ kind: PersistentVolume
 metadata:
   name: pv-jellyfin-media-1
 spec:
-  storageClassName: manual
+  storageClassName: local-path
   capacity:
     storage: 250Gi
   accessModes:
@@ -17,7 +17,7 @@ kind: PersistentVolume
 metadata:
   name: pv-jellyfin-media-2
 spec:
-  storageClassName: manual
+  storageClassName: local-path
   capacity:
     storage: 250Gi
   accessModes:
