--- a/jellyfin/templates/persistentvolumeclaim.yaml
+++ b/jellyfin/templates/persistentvolumeclaim.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-jellyfin-media-1
+  name: pvc-media-1
 spec:
   accessModes:
     - ReadWriteOnce
@@ -11,17 +10,17 @@ spec:
   resources:
     requests:
       storage: 250Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pvc-jellyfin-media-2
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
-  volumeName: pv-jellyfin-media-2
-  resources:
-    requests:
-      storage: 250Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-jellyfin-media-2
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: local-path
+#   volumeName: pv-jellyfin-media-2
+#   resources:
+#     requests:
+#       storage: 250Gi
   
