--- a/jellyfin/templates/volumeclaim.yaml
+++ b/jellyfin/templates/volumeclaim.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-jellyfin-media-1
+  name: pv-media-1
 spec:
   storageClassName: local-path
   capacity:
@@ -11,16 +10,16 @@ spec:
     - ReadWriteOnce
   hostPath: 
     path: '/data/disk1/media'
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-jellyfin-media-2
-spec:
-  storageClassName: local-path
-  capacity:
-    storage: 250Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath: 
-    path: '/data/disk2/media'
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: pv-jellyfin-media-2
+# spec:
+#   storageClassName: local-path
+#   capacity:
+#     storage: 250Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   hostPath: 
+#     path: '/data/disk2/media'
