--- a/jellyfin/templates/deployment.yaml
+++ b/jellyfin/templates/deployment.yaml
@@ -11,6 +11,11 @@ spec:
   selector:
     matchLabels:
       {{- include "jellyfin.selectorLabels" . | nindent 6 }}
+  strategy:
+    rollingUpdate:
+      maxSurge: 100%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       {{- with .Values.podAnnotations }}
