--- a/jellyfin/templates/deployment.yaml
+++ b/jellyfin/templates/deployment.yaml
@@ -12,10 +12,7 @@ spec:
     matchLabels:
       {{- include "jellyfin.selectorLabels" . | nindent 6 }}
   strategy:
-    rollingUpdate:
-      maxSurge: 100%
-      maxUnavailable: 25%
-    type: RollingUpdate
+    type: Recreate
   template:
     metadata:
       {{- with .Values.podAnnotations }}
