--- a/fleet/gitrepo.yaml
+++ b/fleet/gitrepo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: deployments
   namespace: fleet-local
 spec:
-  repo: https://github.com/llucasshenrique/omnilab-k3os
+  repo: git@github.com:llucasshenrique/omnilab-k3os
   clientSecretName: fleet-ssh
   branch: master
 paths:
