fix(jellyfin) host-path  typo

--- a/jellyfin/templates/persistentvolumeclaim.yaml
+++ b/jellyfin/templates/persistentvolumeclaim.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: hostPath
+  storageClassName: host-path
   volumeName: pv-jellyfin-media-1
   resources:
     requests:
