--- a/jellyfin/templates/persistentvolumeclaim.yaml
+++ b/jellyfin/templates/persistentvolumeclaim.yaml
@@ -1,3 +1,17 @@
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-jellyfin-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  volumeName: pv-jellyfin-config
+  resources:
+    request:
+      storage: 5Gi
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
