fix (jellyfin) typo on persistentvolumeclaim

--- a/jellyfin/templates/persistentvolumeclaim.yaml
+++ b/jellyfin/templates/persistentvolumeclaim.yaml
@@ -9,7 +9,7 @@ spec:
   storageClassName: local-path
   volumeName: pv-jellyfin-config
   resources:
-    request:
+    requests:
       storage: 5Gi
 ---
 apiVersion: v1
