--- a/esdb/fleet.yaml
+++ b/esdb/fleet.yaml
@@ -4,6 +4,7 @@ helm:
   repo: https://eventstore.github.io/EventStore.Charts
   chart: eventstore
   values:
+    clusterSize: 1
     persistence:
       enabled: true
     affinity:
