--- a/esdb/fleet.yaml
+++ b/esdb/fleet.yaml
@@ -1,5 +1,7 @@
 defaultNamespace: dev-eventstore
 namespace: dev-eventstore
+kustomize:
+  dir: kustomize
 helm:
   repo: https://eventstore.github.io/EventStore.Charts
   chart: eventstore
