--- a/esdb/kustomize/ingress-route.yaml
+++ b/esdb/kustomize/ingress-route.yaml
@@ -10,7 +10,7 @@ spec:
   - match: Host(`esdb.llucasshenrique.space`)
     kind: Rule
     services:
-    - name: eventstore-esdb
+    - name: eventstore-esdb-admin
       port: 2113
   tls:
     provider: cloudflare
