--- a/harbor/kustomize/ingress-route.yaml
+++ b/harbor/kustomize/ingress-route.yaml
@@ -5,7 +5,7 @@ metadata:
   name: harbor-route
 spec:
   entryPoints:                 
-    - web-secure
+    - websecure
   routes:                      
   - match: HostSNI(`harbor.llucasshenrique.space`)
     services:                  
