--- a/harbor/kustomize/ingress-route.yaml
+++ b/harbor/kustomize/ingress-route.yaml
@@ -4,16 +4,16 @@ kind: IngressRoute
 metadata:
   name: harbor-route
 spec:
-  entryPoints:                 
+  entryPoints:
     - websecure
-  routes:                      
-  - match: Host(`harbor.llucasshenrique.space`)
-    services:                  
-    - name: harbor             
-      port: 80
-  - match: Host(`notary.llucasshenrique.space`)
-    services:                  
-    - name: harbor             
-      port: 4443         
-  tls:                          
+  routes:
+    - match: Host(`harbor.llucasshenrique.space`)
+      services:
+        - name: harbor-harbor-portal
+          port: 80
+    - match: Host(`notary.llucasshenrique.space`)
+      services:
+        - name: harbor-harbor-notary-server
+          port: 4443
+  tls:
     provider: cloudflare
