--- a/harbor/kustomize/ingress-route.yaml
+++ b/harbor/kustomize/ingress-route.yaml
@@ -8,6 +8,7 @@ spec:
     - websecure
   routes:
     - match: Host(`harbor.llucasshenrique.space`)
+      kind: Rule
       services:
         - name: harbor
           port: 30002
