added, helm deployment

--- a/harbor/fleet.yaml
+++ b/harbor/fleet.yaml
@@ -1,5 +1,14 @@
 defaultNamespace: harbor
 namespace: harbor
+helm:
+  repo: https://helm.goharbor.io
+  chard: harbor
+  values:
+    externalURL: 'https://harbor.llucasshenrique.space:443'
+    expose:
+      type: nodePort
+      tls:
+        enabled: false
 kustomize:
   dir: kustomize
   
