new ingress route

--- a/harbor/kustomize/ingress-route.yaml
+++ b/harbor/kustomize/ingress-route.yaml
@@ -10,7 +10,23 @@ spec:
     - match: Host(`harbor.llucasshenrique.space`)
       kind: Rule
       services:
-        - name: harbor
-          port: 30002
+        - name: harbor-harbor-portal
+          port: 80
+    - match: Host(`harbor.llucasshenrique.space`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
+      kind: Rule
+      services:
+      - name: harbor-harbor-core
+        namespace: harbor
+        port: 80
+    - match: Host(`notary.llucasshenrique.space`)
+      kind: Rule
+      services:
+      - name: harbor-harbor-notary-server
+        namespace: harbor
+        port: 4443
   tls:
     provider: cloudflare
+    domains:
+    - main: '*.llucasshenrique.space'
+      sans:
+        - 'llucasshenrique.space'
