--- a/harbor/kustomize/ingress-route.yaml
+++ b/harbor/kustomize/ingress-route.yaml
@@ -15,18 +15,18 @@ spec:
     - match: Host(`harbor.llucasshenrique.space`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
       kind: Rule
       services:
-      - name: harbor-harbor-core
-        namespace: harbor
-        port: 80
+        - name: harbor-harbor-core
+          namespace: harbor
+          port: 80
     - match: Host(`notary.llucasshenrique.space`)
       kind: Rule
       services:
-      - name: harbor-harbor-notary-server
-        namespace: harbor
-        port: 4443
+        - name: harbor-harbor-notary-server
+          namespace: harbor
+          port: 4443
   tls:
     provider: cloudflare
     domains:
-    - main: '*.llucasshenrique.space'
-      sans:
-        - 'llucasshenrique.space'
+      - main: "*.llucasshenrique.space"
+        sans:
+          - "llucasshenrique.space"
