--- a/cannapag/kustomize/config-map.yaml
+++ b/cannapag/kustomize/config-map.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: cannapag-api-rest-config
 data:
-  EVENT_STORE_URL: eventstore-esdb
-  EVENT_STORE_PORT: "1113"
-  EVENT_STORE_TLS: "false"
+  EVENTSTORE_URL: eventstore-esdb
+  EVENTSTORE_PORT: "1113"
+  EVENTSTORE_TLS: "false"
   PORT: "3333"
