added,asaas and auth0 credentials from secrets

--- a/cannapag/kustomize/deployment.yaml
+++ b/cannapag/kustomize/deployment.yaml
@@ -24,6 +24,10 @@ spec:
           image: harbor.llucasshenrique.space/cannapag/api-cannapag:dev
           imagePullPolicy: IfNotPresent
           envFrom:
+            - secretRef:
+                name: cannapag-asaas
+            - secretRef:
+                name: cannapag-auth0    
             - configMapRef:
                 name: cannapag-api-rest-config
           ports:
