remove /api route

--- a/cannapag/kustomize/ingress-route.yaml
+++ b/cannapag/kustomize/ingress-route.yaml
@@ -7,10 +7,10 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`dev-cannapag.llucasshenrique.space`) && PathPrefix('/api')
-    kind: Rule
-    services:
-    - name: dev-cannapag-api
-      port: 80
+    - match: Host(`dev-cannapag.llucasshenrique.space`)
+      kind: Rule
+      services:
+        - name: dev-cannapag-api
+          port: 80
   tls:
     provider: cloudflare
