--- a/cannapag/kustomize/deployment.yaml
+++ b/cannapag/kustomize/deployment.yaml
@@ -19,6 +19,7 @@ spec:
     spec:
       imagePullSecrets:
         - name: harbor
+        - name: harbor-rancher
       containers:
         - name: cannapag-api-rest
           image: harbor.llucasshenrique.space/cannapag/api-rest:0.5.0-alpha
