--- a/cannapag/kustomize/service.yaml
+++ b/cannapag/kustomize/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dev-cannapag-api
+  name: cannapag-api-rest
 spec:
   selector:
-    app: dev-cannapag-api
+    app: cannapag-api-rest
   ports:
   - name: http
-    port: 80
+    port: 3333
     targetPort: http
     
