fix configmap is an object

--- a/traefik/fleet.yaml
+++ b/traefik/fleet.yaml
@@ -29,7 +29,7 @@ helm:
     additionalVolumes:
       - name: traefik-middlewares
         configMap:
-          - name: traefik-middlewares
+          name: traefik-middlewares
     pilot:
       enabled: true
       token: "cf3cf80a-b07f-408a-a7c0-02fcb74ab8ee"
