--- a/traefik/kustomize/config-map.yaml
+++ b/traefik/kustomize/config-map.yaml
@@ -13,7 +13,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: traefik-middlewares
+  name: config-traefik-middlewares
 data:
   forwarded-real-ip.yaml: |
     middlewares:
